2003-05-01  Jody Goldberg <jody@gnome.org>

	* src/sheet-object.c (sheet_object_default_size) : simplify.

2003-05-01  Morten Welinder  <terra@gnome.org>

	* src/gutils.c (g_unichar_strstr_utf8, g_unichar_strchr,
	g_unichar_strncmp, g_unichar_strlen): Delete.
	
	* src/sheet.c (cb_sheet_get_extent): Per Jody, let's respan here
	when needed.

2003-04-29  Morten Welinder  <terra@gnome.org>

	* src/mathfunc.c (mathfunc_init): New function.

	* src/libgnumeric.c (gnm_common_init): Call mathfunc_init.

2003-04-28  Jody Goldberg <jody@gnome.org>

	* configure.in : I'm a lazy bugger and will just commit the
	  directories for the goffice work.

	* src/sheet-object-graph.c (sheet_object_graph_default_size) : Use the
	  graph's notion of its default size.
	(sheet_object_graph_class_init) : init here.

2003-04-28  Morten Welinder  <terra@gnome.org>

	* src/commands.c (cmd_area_set_text_undo): Restore formats too.
	(cmd_set_text_redo): Handle auto-format.
	(cmd_set_text_undo): Undo via pasting.

	* src/auto-format.c (auto_style_format_suggest): Ref the result.

	* src/format.c (style_format_default_money): Make the default
	format be the one using ()s and red negatives.

2003-04-26  Jody Goldberg <jody@gnome.org>

	* src/position.c (parse_pos_init_sheet) : new convenience routine.
	  Use it all over the place.

	* src/gui-util.c (gnm_setup_label_atk) : update.

	* src/workbook-control-gui.c (cb_graph_dim_editor_update) : signature
	  change for the GnmExprEntry::update signal.

2003-04-25  Jody Goldberg <jody@gnome.org>

	* configure.in : bump gsf version req to force the use of CVS.

	* src/ranges.c (range_trim) : do a pre-emptive clip to the existing
	  region to ameliorate the cost.

2003-04-25  Morten Welinder  <terra@gnome.org>

	* src/Makefile (gnm-marshalers.c): Add an #include to the
	generated file.

2003-04-23  Jody Goldberg <jody@gnome.org>

	* src/workbook-edit.c (wbcg_edit_ctor) : set the wbcg early.

2003-04-22  Jody Goldberg <jody@gnome.org>
